--- a/components/projects/Projects.module.css
+++ b/components/projects/Projects.module.css
@@ -1,5 +1,5 @@
 .projects {
-    padding: 10rem 2rem;
+    padding: 10rem 1rem;
     position: relative;
 }
 
@@ -28,6 +28,24 @@
     gap: 5rem;
 }
 
+@media screen and (max-width: 1200px) {
+    .circle {
+        height: 12rem;
+        width: 12rem;
+        border-width: 3rem;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .circle {
+        height: 10rem;
+        width: 10rem;
+        top: 55%;
+    }
+}
+
+
+
 
 @media screen and (max-width: 900px) {
     .circle {
@@ -40,6 +58,10 @@
 }
 
 @media screen and (max-width: 624px) {
+    .projects {
+        padding: 4rem 1rem;
+    }
+
     .circle {
         height: 8rem;
         width: 8rem;
