--- a/components/skills/Skills.module.css
+++ b/components/skills/Skills.module.css
@@ -1,5 +1,5 @@
 .skills {
-    padding: 10rem 2rem;
+    padding: 10rem 1rem;
 }
 
 .container {
